<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>keymint_profile</name>
  <version>0.0.3</version>
  <description>Parsing library for keymint profile manifests.</description>
  <maintainer email="ruffin@osrfoundation.org">Ruffin White</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>python3-setuptools</build_depend>

  <exec_depend>keymint_package</exec_depend>
  <exec_depend>python3-xmlschema</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
